methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:4: error: not found: value verslAvant
  while(verslAvant==true){
        ^MethodsArgs:7: error: not found: value versLavant
  return versLavant
         ^MethodsArgs:7: warning: enclosing method move has result type Unit: return value discarded
  return versLavant
  ^