methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant: Boolean){
  
  while(verslAvant==true){
    avance(nbPas)
  }
  return versLavant
}